# MyAppBuilder

./: .gitignore  CMakeLists.txt  README.md  ideTemplate.jucer
Builds/MacOSX/: Application.cpp  Application.h  Info.plist
Builds/MacOSX/ideTemplate.xcodeproj/: project.pbxproj
Builds/MacOSX/ideTemplate.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Builds/MacOSX/ideTemplate.xcodeproj/project.xcworkspace/xcshareddata/: ideTemplate.xccheckout
JuceLibraryCode/: JuceHeader.h
JuceLibraryCode/modules/juce_audio_formats/format/: juce_AudioFormatReader.cpp
JuceLibraryCode/modules/juce_core/system/: juce_PlatformDefs.h
JuceLibraryCode/modules/juce_gui_basics/widgets/: juce_ListBox.cpp
Source/: Application.cpp  Application.h
Source/ApiComponents/: NodeGraphEditor.h
Source/Base/: CommandIDs.h  CommandManager.cpp  CommandManager.h  DataSaver.cpp  DataSaver.h  FileSaver.cpp  FileSaver.h  FormBuilder.cpp  FormBuilder.h  JsonTreeItem.cpp  JsonTreeItem.h  LayoutManager.cpp  LayoutManager.h  MenuManager.cpp  MenuManager.h  PluginManager.cpp  PluginManager.h  SplitPanelManager.cpp  SplitPanelManager.h  WindowManager.cpp  WindowManager.h
Source/Base/Components/: KeyMappingPanel.cpp  KeyMappingPanel.h  LayoutComponentContainer.cpp  LayoutComponentContainer.h
Source/Base/Layout/: DraggableTabbedComponent.cpp  DraggableTabbedComponent.h  SplitPanel.cpp  SplitPanel.h
Source/Layout/: DraggableTabbedComponent.cpp  DraggableTabbedComponent.h  LayoutManager.cpp  LayoutManager.h  SplitPanel.cpp  SplitPanel.h  SplitPanelManager.cpp  SplitPanelManager.h  TabbedSplitPanel.cpp  TabbedSplitPanel.h
Source/Menu/: MenuManager.cpp  MenuManager.h
Source/Menu/menus/: ContextMenu.cpp  ContextMenu.h  MainMenu.cpp  MainMenu.h  ToolBarMenu.cpp  ToolBarMenu.h
Source/Munus/: MainMenu.cpp  MainMenu.h
Source/Plugin/: ApplicationPluginCommunication.cpp  PluginManager.cpp  PluginManager.h  PluginWrapper.cpp  PluginWrapper.h
Source/Plugin/api/: ApplicationPluginCommunication.h  Plugin.h
Source/Plugin/components/: NodeGraphEditor.cpp
Source/Plugin/testPlugin/: firstPlugin.cpp  firstPlugin.h
Source/Project/: ProjectManager.cpp  ProjectManager.h
Source/Settings/: ApplicationSettings.cpp  ApplicationSettings.h  PluginSettings.cpp  PluginSettings.h  ProjectSettings.cpp  ProjectSettings.h  Settings.cpp  Settings.h  SettingsContentFactory.cpp  SettingsContentFactory.h  SettingsManager.cpp  SettingsManager.h  SettingsManagerInterface.h  SettingsPanel.cpp  SettingsPanel.h  SettingsSet.cpp  SettingsSet.h  SettingsTreeViewItem.cpp  SettingsTreeViewItem.h
Source/Themes/: DarkTheme.cpp  DarkTheme.h
Source/Window/: WindowManager.cpp  WindowManager.h
Source/Window/types/: ApplicationWindow.cpp  ApplicationWindow.h  DialogWindow.cpp  DialogWindow.h  SettingsWindow.h
Source/WindowTypes/: ApplicationWindow.h  SettingsWindow.cpp
juce/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
juce/cmake/: juce_osx.cmake
(+3 files in other folders)
